# device_xiaomi_mondrian

./: Android.bp  Android.mk  AndroidProducts.mk  BUILD.md  BoardConfig.mk  BoardConfigCommon.mk  CHANGELOG.md  README.md  aosp_mondrian.mk  apply-patches.sh  board-info.txt  common.mk  device.mk  evolution.dependencies  evolution_mondrian.mk  extract-files.sh  lineage_mondrian.mk  modules.load  modules.load.recovery  modules.load.vendor_boot  project_changes.diff  proprietary-files.txt  setup-makefiles.sh  vendor_boot.modules.load  vendor_dlkm.blocklist
audio/: audio_effects.xml  audio_policy_configuration.xml  audio_policy_configuration_a2dp_offload_disabled.xml  bluetooth_qti_hearing_aid_audio_policy_configuration.xml  card-defs.xml  media_codecs_c2_audio.xml  microphone_characteristics.xml  mixer_paths_overlay_static.xml  mixer_paths_ukee_mtp.xml  mixer_paths_waipio_mtp.xml  resourcemanager_waipio_mtp.xml  usecaseKvManager.xml
audio-factory-test/: Android.mk
bootctrl/: Android.bp
configs/: config.fs  privapp-permissions-hotword.xml  qti_whitelist.xml  snapdragon_color_libs_config.xml
dlkm/: vendor_boot.modules.load.recovery  vendor_dlkm.modules.load
dt2w/: Android.bp  AndroidManifest.xml  privapp-permissions_org.pixelexperience.dt2w.Mondrian.xml
fingerprint/: Android.bp  BiometricsFingerprint.cpp  UdfpsExtension.cpp  service.cpp  (+2 more)
gps/: Android.bp  (+4 more)
gps/gnss/: Agps.cpp  Agps.h  Android.bp  GnssAdapter.cpp  GnssAdapter.h  Makefile.am  NativeAgpsHandler.cpp  NativeAgpsHandler.h  XtraSystemStatusObserver.cpp  XtraSystemStatusObserver.h  location_gnss.cpp
(+2166 files in other folders)
